--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@types/jest": "^26.0.15",
+    "@types/bootstrap": "^5.0.8",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.0.0",
+    "@types/node-sass": "^4.11.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
